[b][color=orange]v4.30[/color], 19.08.2019[/b][list]
[*]More code cleanup.
[*]Fixed an issue, which can happen with BenikUI FlightMode.
[*]Added a description for my Tags in the UnitFrame options.
[*]Added option to change the Paragon Bar Color and Text Style.
[*]Added a notification for Paragon Rewards.[/list]

[b][color=orange]v4.29[/color], 18.08.2019[/b][list]
[*]Code Cleanup.
[*]Fixed an error in Notifications.
[*]Updated Community skin.
[*]Updated ObjectiveTracker skin.
[*]Fixed some backdrops on my skins.
[*]Fixed the border from AutoButtons.
[*]Removed the NP Castbar Target.
[*]Updated BW/Details Profiles.
[*]Removed OzCooldowns Profile.
[*]Added iFilger Profile.
[*]Layout Updates. See inGame changelog info!!
[*]Added an own ProgressBar over the Minimap.[/list]

[b][color=orange]v4.28[/color], 05.08.2019[/b][list]
[*]Added Pawn Skin, needs AddOnSkins to work.
[*]Adjust some install settings.
[*]Added a Paragon Reputation feature.
[*]Finally fixed a db error if AAP + HandyNotes are enabled. Big thanks to NihilisticPandemonium <3[/list]

[b][color=orange]v4.27[/color], 29.07.2019[/b][list]
[*]Update some skins.
[*]Update Azerite Armor Tooltip.
[*]Hide the RaidManager during Pet Battles.
[*]Removed WeakAuras Skin.[/list]

[b][color=orange]v4.26[/color], 23.07.2019[/b][list]
[*]Added Eternal Palace to Raid Progress on Tooltip.
[*]Changed Layout due to removal from Masque.
[*]Added S&L Merchant skin incompatibility check.
[*]Enable Cutaway Health on Player-/Target Frame.
[*]RaiderIO skin fix.[/list]

[b][color=orange]v4.25[/color], 15.07.2019[/b][list]
[*]Fixed a GMOTD PlaySoundFile.
[*]Fixed Enable Options for RaidCD.
[*]Removed SLE Armory Incompatibility check.[/list]

[b][color=orange]v4.24[/color], 04.07.2019[/b][list]
[*]Removed Talent Manager. Caused too many errors.
[*]Added new Wormhole Generators to LocPanel.
[*]Added PVPMatchUI skin.
[*]IMPORTANT: Updated my Layout to not block certain World Quest.