@@ -17,11 +17,14 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• More code cleanup",
-		"• Fixed an issue, which can happen with BenikUI FlightMode",
-		"• Added a description for my Tags in the UnitFrame options",
-		"• Added option to change the Paragon Bar Color and Text Style",
-		"• Added a notification for Paragon Rewards",
+		"• Removed my own ProgressBar. Was a good idea, but nah",
+		"• Remove transparent options for Bags/ActionBars. Now in ElvUI",
+		"• Enhance AutoButtons",
+		"• Hide the progress Tooltip if Raider.IO is loaded",
+		"• Updated some Skins",
+		"• Code cleanup. And hopefully fix some nil errors",
+		"• Added back TradeSkillTabs",
+		"• Added FPS and Latency to my MicroButton Time Tooltip",
 		-- "• ''",
 	" ",
 	"Notes:",
