@@ -1,3 +1,13 @@
+[b][color=orange]v4.31[/color], 06.09.2019[/b][list]
+[*]Removed my own ProgressBar. Was a good idea, but nah.
+[*]Remove transparent options for Bags/ActionBars. Now in ElvUI.
+[*]Enhance AutoButtons.
+[*]Hide the progress Tooltip if Raider.IO is loaded.
+[*]Updated some Skins.
+[*]Code cleanup. And hopefully fix some nil errors.
+[*]Added back TradeSkillTabs.
+[*]Added FPS and Latency to my MicroButton Time Tooltip.
+
 [b][color=orange]v4.30[/color], 19.08.2019[/b][list]
 [*]More code cleanup.
 [*]Fixed an issue, which can happen with BenikUI FlightMode.
